--- a/portal/src/main/webapp/css/global_portal.css
+++ b/portal/src/main/webapp/css/global_portal.css
@@ -63,7 +63,7 @@ td, th {
 #page_wrapper {
   margin: 0 auto;
   min-width: 780px;
-  max-width: 1280px !important;
+  /* max-width: 1280px !important; */
   text-align: left;
   padding: 0px;
 }
@@ -153,9 +153,9 @@ A:hover {
 }
 
 #main_submit {
-    background-color: #e6e6e6;    
-    color: transparent;     
-    display: inline-block;           
+    background-color: #e6e6e6;
+    color: transparent;
+    display: inline-block;
     text-shadow: 0 0 0 black;
 }
 
@@ -644,9 +644,9 @@ input[type=range]#oncoprint_zoom_slider::-ms-fill-lower {
     border-radius: 10px;
 }
 
-/* The thumb still can't overflow the track in IE. 
-We can fake a wide enough track by adding a thick transparent border on the top and bottom of the track. 
-We'll also move most of our styles to ::-ms-fill-lower and ::-ms-fill-upper instead of ::ms-track 
+/* The thumb still can't overflow the track in IE.
+We can fake a wide enough track by adding a thick transparent border on the top and bottom of the track.
+We'll also move most of our styles to ::-ms-fill-lower and ::-ms-fill-upper instead of ::ms-track
 to make sure things like border-radius render correctly.*/
 input[type=range]#oncoprint_zoom_slider::-ms-fill-upper {
     background: #ccc;
@@ -1130,7 +1130,7 @@ html { min-height: 100%; margin-bottom: 1px; min-width: 100%; margin-right: 1px;
 }
 
 /* IE11 specific styling */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   #right_side input[type="submit"] {
     line-height: 28px;
   }
